# tara-bot

./: .gitignore  Chay_Bot_Tara.bat  Dockerfile  README.md  pyproject.toml
src/: agents.py  bot.py
src/tara_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: serpapi.py  shopping.py
